Fixed footer link spacing

--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -883,7 +883,10 @@ a.add-location-link {
 
 	.spacer {
 		display: inline-block;
-		width:85px;
+		width:55px;
+	}
+	.aboutlink{
+		margin-left:50px;
 	}
 }
 
